--- a/package.json
+++ b/package.json
@@ -12,25 +12,24 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@types/aws-lambda": "^8.10.119",
-    "@types/jest": "^29.5.1",
-    "@types/node": "20.1.7",
-    "aws-cdk": "2.85.0",
-    "jest": "^29.5.0",
-    "ts-jest": "^29.1.0",
+    "@types/aws-lambda": "^8.10.133",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.11.16",
+    "aws-cdk": "^2.126.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
-    "typescript": "~5.0.4"
+    "typescript": "^5.3.3"
   },
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.385.0",
-    "@aws-sdk/client-s3": "^3.499.0",
-    "@aws-sdk/lib-dynamodb": "^3.385.0",
-    "aws-cdk-lib": "^2.87.0",
+    "@aws-sdk/client-dynamodb": "^3.507.0",
+    "@aws-sdk/client-s3": "^3.507.0",
+    "@aws-sdk/lib-dynamodb": "^3.507.0",
+    "aws-cdk-lib": "^2.126.0",
     "aws-lambda": "^1.0.7",
-    "axios": "^1.6.6",
-    "cheerio": "^1.0.0-rc.12",
-    "constructs": "^10.0.0",
-    "dynamodb-toolbox": "^0.8.5",
+    "axios": "^1.6.7",
+    "constructs": "^10.3.0",
+    "dynamodb-toolbox": "^0.9.2",
     "source-map-support": "^0.5.21"
   }
 }
